--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
        <p id="day"></p><NOBR>
        <p id="month"></p>
        <p id="year"></p></NOBR>
-       <p id="time">heure France</p>
+       <p id="time">France</p>
         
         
     </section>
