--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
        <p id="day"></p><NOBR>
        <p id="month"></p>
        <p id="year"></p></NOBR>
-       <p id="time">France</p>
+       <p id="time"> </p>
+       <span id="fr">(L'heure en France)</span>
 
         
         
